spacing issues

--- a/app.css
+++ b/app.css
@@ -328,7 +328,7 @@ a:visited {
 	}
 
 	#aboutlink {
-		padding-left: 10px;
+		padding-left: 30px;
 	}
 
 	#resumelink {
@@ -348,7 +348,7 @@ a:visited {
 	}
 
 	#landingpage h1 {
-		margin-top: 50px;
+		margin-top: 150px;
 	}
 
 	#about {
